built_project/mephmicroapi/k8s/test/restapi_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mephmicroapi-restapi-deployment
  namespace: meph
spec:
  selector:
    matchLabels:
      k8s-app: mephmicroapi-restapi
  template:
    metadata:
      labels:
        k8s-app: mephmicroapi-restapi
      annotations:
        deploymentVersionTag: "1580581509"
    spec:
      containers:
        - name: app
          envFrom:
            - configMapRef:
                name: configmap-mephmicroapi-restapi
          image: localhost:5000/mephmicroapi-restapi:DEVELOP-SNAPSHOT
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            initialDelaySeconds: 120
            httpGet:
              path: /health
              port: http
          livenessProbe:
            initialDelaySeconds: 120
            httpGet:
              path: /health
              port: http
          resources:
            limits:
              cpu: 0.2
              memory: 256Mi
            requests:
              cpu: 0.1
              memory: 128Mi
